feat: implements order in get items and reset db
